Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35681

WebKit fails to build LLInt on ARM softfp

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 5.2.1
    • 5.2.0
    • WebKit
    • None
    • 8a716a29721d900069d82878c45cf87a356adba3

    Description

      With Qt 5.2.0, WebKit doesn't compile anymore when using ARM softfp toolchain with GCC 4.3.3.

      Here is the log:

      make[2]: ingresso nella directory "/home/omapdev/qt-everywhere-opensource-src-5.2.0/qtwebkit/Source/JavaScriptCore"
      /home/omapdev/ti-dvsdk_dm3730-evm_04_03_00_06/linux-devkit/bin/arm-arago-linux-gnueabi-g++ -c -Wall -Wextra -Wreturn-type -fno-strict-aliasing -Wchar-subscripts -Wformat-security -Wreturn-type -Wno-unused-parameter -Wno-sign-compare -Wno-switch -Wno-switch-enum -Wundef -Wmissing-noreturn -Winit-self -pipe -fno-stack-protector -O3 -march=armv7-a -mfpu=neon -mfloat-abi=softfp -O3 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -pthread -fno-exceptions -D_REENTRANT -MD -DQT_NO_XCB -DQT_NO_XKBCOMMON -DBUILDING_QT__=1 -DNDEBUG -DENABLE_3D_RENDERING=1 -DENABLE_BLOB=1 -DENABLE_CANVAS_PATH=1 -DENABLE_CHANNEL_MESSAGING=1 -DENABLE_CSS_BOX_DECORATION_BREAK=1 -DENABLE_CSS_COMPOSITING=1 -DENABLE_CSS_EXCLUSIONS=1 -DENABLE_CSS_FILTERS=1 -DENABLE_CSS_IMAGE_SET=1 -DENABLE_CSS_REGIONS=1 -DENABLE_CSS_SHAPES=1 -DENABLE_CSS_STICKY_POSITION=1 -DENABLE_CSS_TRANSFORMS_ANIMATIONS_UNPREFIXED=1 -DENABLE_DATALIST_ELEMENT=1 -DENABLE_DETAILS_ELEMENT=1 -DENABLE_DEVICE_ORIENTATION=1 -DENABLE_FAST_MOBILE_SCROLLING=1 -DENABLE_FILTERS=1 -DENABLE_FTPDIR=1 -DENABLE_FULLSCREEN_API=1 -DENABLE_GESTURE_EVENTS=1 -DENABLE_ICONDATABASE=1 -DENABLE_IFRAME_SEAMLESS=1 -DENABLE_INPUT_TYPE_COLOR=1 -DENABLE_INSPECTOR=1 -DENABLE_INSPECTOR_SERVER=1 -DENABLE_JAVASCRIPT_DEBUGGER=1 -DENABLE_LEGACY_NOTIFICATIONS=1 -DENABLE_LEGACY_VIEWPORT_ADAPTION=1 -DENABLE_LEGACY_VENDOR_PREFIXES=1 -DENABLE_LEGACY_WEB_AUDIO=1 -DENABLE_LINK_PREFETCH=1 -DENABLE_METER_ELEMENT=1 -DENABLE_MHTML=1 -DENABLE_NOTIFICATIONS=1 -DENABLE_ORIENTATION_EVENTS=1 -DENABLE_PAGE_VISIBILITY_API=1 -DENABLE_PROGRESS_ELEMENT=1 -DENABLE_RESOLUTION_MEDIA_QUERY=1 -DENABLE_REQUEST_ANIMATION_FRAME=1 -DENABLE_SHARED_WORKERS=1 -DENABLE_SMOOTH_SCROLLING=1 -DENABLE_SQL_DATABASE=1 -DENABLE_SUBPIXEL_LAYOUT=1 -DENABLE_SVG=1 -DENABLE_SVG_FONTS=1 -DENABLE_TOUCH_ADJUSTMENT=1 -DENABLE_TOUCH_EVENTS=1 -DENABLE_VIEW_MODE_CSS_MEDIA=1 -DENABLE_WEB_SOCKETS=1 -DENABLE_WEB_TIMING=1 -DENABLE_WORKERS=1 -DENABLE_XHR_TIMEOUT=1 -DWTF_USE_TILED_BACKING_STORE=1 -DWTF_USE_CROSS_PLATFORM_CONTEXT_MENUS=1 -DHAVE_QTQUICK=1 -DHAVE_QTPRINTSUPPORT=1 -DHAVE_QSTYLE=1 -DHAVE_QTTESTLIB=1 -DHAVE_QTSENSORS=1 -DWTF_USE_LIBXML2=1 -DWTF_USE_ZLIB=1 -DWTF_USE_LIBPNG=1 -DHAVE_FONTCONFIG=1 -DPLUGIN_ARCHITECTURE_UNSUPPORTED=1 -DWTF_USE_3D_GRAPHICS=1 -DENABLE_WEBGL=1 -DENABLE_CSS_SHADERS=1 -DENABLE_VIDEO=1 -DWTF_USE_GSTREAMER=1 -DWTF_USE_GSTREAMER010=1 -DWTF_USE_NATIVE_FULLSCREEN_VIDEO=1 -DENABLE_GAMEPAD=1 -DENABLE_TOUCH_SLIDER=1 -DWTF_USE_GLIB=1 -DHAVE_QTTESTSUPPORT=1 -DENABLE_ACCELERATED_2D_CANVAS=0 -DENABLE_BATTERY_STATUS=0 -DENABLE_CANVAS_PROXY=0 -DENABLE_CSP_NEXT=0 -DENABLE_CSS_GRID_LAYOUT=0 -DENABLE_CSS_HIERARCHIES=0 -DENABLE_CSS_IMAGE_ORIENTATION=0 -DENABLE_CSS_IMAGE_RESOLUTION=0 -DENABLE_CSS_VARIABLES=0 -DENABLE_CSS3_CONDITIONAL_RULES=0 -DENABLE_CSS3_TEXT=0 -DENABLE_CSS3_TEXT_LINE_BREAK=0 -DENABLE_DASHBOARD_SUPPORT=0 -DENABLE_DATAGRID=0 -DENABLE_DATA_TRANSFER_ITEMS=0 -DENABLE_DIRECTORY_UPLOAD=0 -DENABLE_DOWNLOAD_ATTRIBUTE=0 -DENABLE_FILE_SYSTEM=0 -DENABLE_FONT_LOAD_EVENTS=0 -DENABLE_GEOLOCATION=0 -DENABLE_HIGH_DPI_CANVAS=0 -DENABLE_INDEXED_DATABASE=0 -DENABLE_INPUT_SPEECH=0 -DENABLE_INPUT_TYPE_DATE=0 -DENABLE_INPUT_TYPE_DATETIME_INCOMPLETE=0 -DENABLE_INPUT_TYPE_DATETIMELOCAL=0 -DENABLE_INPUT_TYPE_MONTH=0 -DENABLE_INPUT_TYPE_TIME=0 -DENABLE_INPUT_TYPE_WEEK=0 -DENABLE_LEGACY_CSS_VENDOR_PREFIXES=0 -DENABLE_MATHML=0 -DENABLE_MEDIA_SOURCE=0 -DENABLE_MEDIA_STATISTICS=0 -DENABLE_MEDIA_STREAM=0 -DENABLE_MICRODATA=0 -DENABLE_MOUSE_CURSOR_SCALE=0 -DENABLE_NAVIGATOR_CONTENT_UTILS=0 -DENABLE_NETSCAPE_PLUGIN_API=0 -DENABLE_NETWORK_INFO=0 -DENABLE_NOSNIFF=0 -DENABLE_PROXIMITY_EVENTS=0 -DENABLE_QUOTA=0 -DENABLE_RESOURCE_TIMING=0 -DENABLE_SCRIPTED_SPEECH=0 -DENABLE_SECCOMP_FILTERS=0 -DENABLE_SHADOW_DOM=0 -DENABLE_STYLE_SCOPED=0 -DENABLE_TEMPLATE_ELEMENT=0 -DENABLE_TEXT_AUTOSIZING=0 -DENABLE_THREADED_HTML_PARSER=0 -DENABLE_TOUCH_ICON_LOADING=0 -DENABLE_USER_TIMING=0 -DENABLE_VIBRATION=0 -DENABLE_VIDEO_TRACK=0 -DENABLE_WEB_AUDIO=0 -DENABLE_XSLT=0 -DSTATICALLY_LINKED_WITH_WTF -DBUILDING_JavaScriptCore -DBUILDING_WEBKIT -DQT_ASCII_CAST_WARNINGS -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_CORE_LIB -I/home/omapdev/qt-everywhere-opensource-src-5.2.0/qtbase/mkspecs/linux-arm-gnueabi-ti-g++ -I. -I. -I../../Source -I../WTF -Iassembler -Ibytecode -Ibytecompiler -Iheap -Idfg -Idebugger -Idisassembler -Iinterpreter -Ijit -Illint -Iparser -Iprofiler -Iruntime -Itools -Iyarr -IAPI -IForwardingHeaders -Igenerated -I../../Source -I/home/omapdev/qt-everywhere-opensource-src-5.2.0/qtwebkit/Source/include -I../WTF -I/home/omapdev/ti-dvsdk_dm3730-evm_04_03_00_06/linux-devkit/arm-arago-linux-gnueabi/usr/include/glib-2.0 -I/home/omapdev/ti-dvsdk_dm3730-evm_04_03_00_06/linux-devkit/arm-arago-linux-gnueabi/usr/lib/glib-2.0/include -I/home/omapdev/qt-everywhere-opensource-src-5.2.0/qtbase/include -I/home/omapdev/qt-everywhere-opensource-src-5.2.0/qtbase/include/QtCore -I.moc -I/home/omapdev/ti-dvsdk_dm3730-evm_04_03_00_06/linux-devkit/arm-arago-linux-gnueabi/usr/include -I/home/omapdev/ti-dvsdk_dm3730-evm_04_03_00_06/linux-devkit/arm-arago-linux-gnueabi/usr/include/glib-2.0 -I/home/omapdev/ti-dvsdk_dm3730-evm_04_03_00_06/linux-devkit/arm-arago-linux-gnueabi/usr/lib/glib-2.0/include -I/home/omapdev/ti-dvsdk_dm3730-evm_04_03_00_06/linux-devkit/arm-arago-linux-gnueabi/usr/include/libxml2 -I/home/omapdev/ti-dvsdk_dm3730-evm_04_03_00_06/linux-devkit/arm-arago-linux-gnueabi/usr/include/freetype2 -I/home/omapdev/ti-dvsdk_dm3730-evm_04_03_00_06/linux-devkit/arm-arago-linux-gnueabi/usr/include/dbus-1.0 -I/home/omapdev/ti-dvsdk_dm3730-evm_04_03_00_06/linux-devkit/arm-arago-linux-gnueabi/usr/include/dbus-1.0/dbus -o .obj/llint/LowLevelInterpreter.o llint/LowLevelInterpreter.cpp
      {standard input}: Assembler messages:
      {standard input}:1433: Error: bad instruction `vmrs apsr_nzcv,fpscr'
      {standard input}:2835: Error: bad instruction `vmrs apsr_nzcv,fpscr'
      {standard input}:3169: Error: bad instruction `vmrs apsr_nzcv,fpscr'
      {standard input}:4914: Error: bad instruction `vmrs apsr_nzcv,fpscr'
      {standard input}:4927: Error: bad instruction `vmrs apsr_nzcv,fpscr'
      {standard input}:5011: Error: bad instruction `vmrs apsr_nzcv,fpscr'
      {standard input}:5024: Error: bad instruction `vmrs apsr_nzcv,fpscr'
      {standard input}:5108: Error: bad instruction `vmrs apsr_nzcv,fpscr'
      {standard input}:5121: Error: bad instruction `vmrs apsr_nzcv,fpscr'
      {standard input}:5205: Error: bad instruction `vmrs apsr_nzcv,fpscr'
      {standard input}:5218: Error: bad instruction `vmrs apsr_nzcv,fpscr'
      {standard input}:5302: Error: bad instruction `vmrs apsr_nzcv,fpscr'
      {standard input}:5315: Error: bad instruction `vmrs apsr_nzcv,fpscr'
      {standard input}:5399: Error: bad instruction `vmrs apsr_nzcv,fpscr'
      {standard input}:5412: Error: bad instruction `vmrs apsr_nzcv,fpscr'
      {standard input}:5496: Error: bad instruction `vmrs apsr_nzcv,fpscr'
      {standard input}:5509: Error: bad instruction `vmrs apsr_nzcv,fpscr'
      {standard input}:5593: Error: bad instruction `vmrs apsr_nzcv,fpscr'
      {standard input}:5606: Error: bad instruction `vmrs apsr_nzcv,fpscr'
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            allan.jensen Allan Sandfeld Jensen
            lucaotta Luca Ottaviano
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes