Fix QtWebKit build on ARM softfp

The low level interpreter depends on hardfp, so we need to disable it
when builing on ARM targets with softfp.

Task-number: QTBUG-35681
Change-Id: I8aaef546b92182a87cc7116ac452d8725de6a7db
Reviewed-by: Jocelyn Turcotte <jocelyn.turcotte@digia.com>